fixed overlaping syles in the review page and the aplly page

--- a/public/css/readmore.css
+++ b/public/css/readmore.css
@@ -1,4 +1,4 @@
-/* Add some basic styling */
+
   body {
     margin: 0;
     padding: 0;
@@ -147,13 +147,14 @@ nav a.all-jobs:hover {
   }
 }
 .card {
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 4px 8px 0 rgba(117, 9, 9, 0.2);
     transition: 0.3s;
     border-radius: 5px;
-    width: 400px;
-    height: 400px;
-    margin-top: -100px;
+    width: 300px;
+    height: 300px;
+    margin-top: 300px;
     margin-left: 30px;
+    background-color: rgb(36, 11, 110);
 }
 
 .card:hover {
@@ -168,6 +169,7 @@ nav a.all-jobs:hover {
 .card-body {
     padding: 2px 16px;
     margin-left: 120px;
+    
 }
 
 .card-title {
